@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-06T00:54:26Z",
+  "timestamp" : "2022-04-06T16:15:18Z",
   "count_outdated" : 235,
   "uniques_outdated" : 109,
-  "count" : 250,
-  "uniques" : 118,
+  "count" : 251,
+  "uniques" : 119,
   "clones" : [
     {
       "timestamp": "2022-03-26T00:00:00Z",
@@ -32,6 +32,13 @@
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
     }
   ]
 }
