@@ -1,3 +1,9 @@
+2022-04-06T16:15:18Z:
+* notice: last 14d: all unq: 16 10
+* notice: prev accum: outdated-all outdated-unq / all unq: 235 109 / 250 118
+* notice: next accum: outdated-all outdated-unq / all unq: 235 109 / 251 119
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +2 +2 / -0 -0
+
 2022-04-06T00:54:26Z:
 * notice: last 14d: all unq: 15 9
 * notice: prev accum: outdated-all outdated-unq / all unq: 235 109 / 249 117
